azure-pipelines/k8s/output/dev/da-mottak/templates/kicker-deployment.yaml
---
# Source: da-mottak/templates/kicker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: da-mottak-dev-kicker-deployment
  namespace: da-mottak-dev
  labels:
    app: kicker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: kicker-app
  template:
    metadata:
      labels:
        run: kicker-app
    spec:
      containers:
        - image: 'arkivverket.azurecr.io/av-mottak/kicker:kriwal'
          imagePullPolicy: Always
          name: kicker-container
