azure-pipelines/k8s/output/dev/da-mottak/templates/mount_the_secrets.yaml
---
# Source: da-mottak/templates/mount_the_secrets.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: da-mottak-dev-nginx-mount-secret
  namespace: da-mottak-dev
  labels:
    aadpodidbinding: "da-mottak-dev-id-keyvault"
spec:
  selector:
    matchLabels:
      app: da-mottak-dev-nginx-mount-secret
  replicas: 1
  template:
    metadata:
      labels:
        app: da-mottak-dev-nginx-mount-secret
        aadpodidbinding: "da-mottak-dev-id-keyvault"
    spec:
      containers:
        - name: nginx
          imagePullPolicy: Always
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/mnt/secrets-store"
              name: secrets-store-inline
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "da-mottak-dev-csidriver-keyvault"
