azure-pipelines/k8s/output/dev/da-mottak/templates/minio-deployment.yaml
---
# Source: da-mottak/templates/minio-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name:  minio-service
  namespace: da-mottak-dev
spec:
  type: ClusterIP
  ports:
    - name: minio
      port: 9000
  selector:
    run:  minio-app    # references the deployment
---
# Source: da-mottak/templates/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: da-mottak-dev.minio-deployment
  namespace: da-mottak-dev
  labels:
    app: minio-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: minio-app
  template:
    metadata:
      labels:
        run: minio-app
    spec:
      containers:
        - image: minio/minio
          args: ["gateway", "azure"]
          name: minio-container
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
