azure-pipelines/k8s/output/dev/da-mottak/templates/mottak-arkiv-service-deployment.yaml
---
# Source: da-mottak/templates/mottak-arkiv-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: da-mottak-dev-mottak-arkiv-service-service
  namespace: da-mottak-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    run:  mottak-arkiv-service-app    # references the deployment
---
# Source: da-mottak/templates/mottak-arkiv-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: da-mottak-dev-mottak-arkiv-service-deployment
  namespace: da-mottak-dev
  labels:
    app: mottak-arkiv-service-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # Should always be 1 to avoid race condition on db migration
      maxUnavailable: 0
  selector:
    matchLabels:
      run: mottak-arkiv-service-app
  template:
    metadata:
      labels:
        run: mottak-arkiv-service-app
    spec:
      containers:
        - image: 'arkivverket.azurecr.io/da-mottak/mottak-arkiv-service:2a166b25a82733e74c6aeca6046a0f6622970dd3'
          imagePullPolicy: Always
          name: mottak-arkiv-service-container
          ports:
            - containerPort: 80
              protocol: TCP
