azure-pipelines/k8s/output/dev/da-mottak/templates/mottak-arkiv-web-deployment.yaml
---
# Source: da-mottak/templates/mottak-arkiv-web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: da-mottak-dev-mottak-arkiv-web-service
  namespace: da-mottak-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    run:  mottak-arkiv-web-app    # references the deployment
---
# Source: da-mottak/templates/mottak-arkiv-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: da-mottak-dev-mottak-arkiv-web-deployment
  namespace: da-mottak-dev
  labels:
    app: mottak-arkiv-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mottak-arkiv-web-app
  template:
    metadata:
      labels:
        run: mottak-arkiv-web-app
    spec:
      containers:
        - image: 'arkivverket.azurecr.io/av-mottak/mottak-arkiv-web:7df018174d06c949878b5b99d9980592b587aa89'
          imagePullPolicy: Always
          name: mottak-arkiv-web-container
          ports:
            - containerPort: 80
