azure-pipelines/k8s/output/dev/da-mottak/templates/storage-sas-generator-deployment.yaml
---
# Source: da-mottak/templates/storage-sas-generator-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: da-mottak-dev-storage-sas-generator-service
  namespace: da-mottak-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    run:  storage-sas-generator-app    # references the deployment
---
# Source: da-mottak/templates/storage-sas-generator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: da-mottak-dev-storage-sas-generator-deployment
  namespace: da-mottak-dev
  labels:
    app: storage-sas-generator-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: storage-sas-generator-app
  template:
    metadata:
      labels:
        run: storage-sas-generator-app
    spec:
      containers:
        - image: 'arkivverket.azurecr.io/da-mottak/storage-sas-generator:a5a36d8e0fdff7986490c765a9f824187ff70df1'
          imagePullPolicy: Always
          name: storage-sas-generator
          ports:
            - containerPort: 80
