azure-pipelines/k8s/output/dev/da-mottak/templates/ingress.yaml
---
# Source: da-mottak/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: da-mottak-dev-ingress
  namespace: da-mottak-dev
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: da-mottak-dev-clusterissuer
    cert-manager.io/acme-challenge-type: http01
    appgw.ingress.kubernetes.io/backend-hostname: "mottak.plattform.arkivverket.dev"
    appgw.ingress.kubernetes.io/connection-draining: "true"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "30"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  tls:
    - hosts:
        - mottak.plattform.arkivverket.dev
      secretName: da-mottak-dev-cert
  rules:
    - host: mottak.plattform.arkivverket.dev
      http:
        paths:
          - path: /
            backend:
                serviceName: da-mottak-dev-nginx-service
                servicePort: 80
